refactor: simplify permission handling in SecurityConfiguration using pattern matching